--- a/example.env
+++ b/example.env
@@ -7,7 +7,7 @@ API_HASH= # Your API HASH from my.telegram.org
 OWNER_ID= # your telegram id needed for broadcast function
 DATABASE_URL= # the mongodb url get from cloud.mongodb.com
 LOG_CHANNEL= # create a private channel, get the channel id by given the channel username/link to bot @username_to_id_bot, then add your bot to the channel as admin
-BG_IMAGE=https://telegra.ph/file/8628c642a266a22effd8c.png
+BG_IMAGE=https://telegra.ph/file/8628c642a266a22effd8c.png # costum background image
 SUDO_USERS=1757169682 1670523611 1727937540 # List of user IDs separated by space
 DURATION_LIMIT=240 # in minutes (default: 15)
 UPDATES_CHANNEL=levinachannel
