--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-git+https://github.com/pyrogram/pyrogram@master
 tgcrypto
-py-tgcalls
+git+https://github.com/pyrogram/pyrogram@master
+git+https://github.com/yt-dlp/yt-dlp@master
+youtube-search-python==1.4.9
+py-tgcalls==0.8.1rc1
+httpx==0.13.3
 python-dotenv
-youtube-search-python
 requests
 aiohttp
 aiofiles
@@ -16,8 +18,3 @@ psutil
 wget
 motor
 dnspython
-yt-dlp
-httpx==0.13.3
-heroku3
-gitpython
-pymongo
