--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-tgcrypto
 git+https://github.com/pyrogram/pyrogram@master
+tgcrypto
+youtube-search
 git+https://github.com/yt-dlp/yt-dlp@master
-youtube-search-python==1.4.9
 py-tgcalls
 python-dotenv
 requests
@@ -14,6 +14,7 @@ future
 psutil
 wget
 motor
+pymongo
 dnspython
 heroku3
 gitpython
